--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     tg.expand();
 
     // СЮДА НУЖНО БУДЕТ ВСТАВИТЬ ССЫЛКУ НА ТВОЙ СЕРВЕР ПОТОМ
-    const BACKEND_URL = "https://your-backend-placeholder.com"; 
+    const BACKEND_URL = "https://smokin-v2.vercel.app"; 
 
     const firebaseConfig = {
         apiKey: "AIzaSyD3wDw2ZTTXn2gY467grDOVi9E5vcusilc",
