--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ async function startSpin(type) {
             console.error(e);
         }
     } else if (type === 'money') {
-        window.open("https://www.tbank.ru/rm/vash_nomer", '_blank');
+        window.open("https://www.tbank.ru/rm/89826668200", '_blank');
         result.innerText = "ЖДЕМ ПОДТВЕРЖДЕНИЯ (5 МИН)";
     }
 }
@@ -363,6 +363,7 @@ async function startSpin(type) {
 </script>
 </body>
 </html>
+
 
 
 
