--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-вот в этом коде почти нормально все было <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -445,3 +445,4 @@
 </script>
 </body>
 </html>
+
