--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
     
         // 4. Генерируем ссылку на менеджера (t.me/smokin174)
         // Используем юзернейм Smokin174 без собачки
-        const managerUrl = `https://t.me/smokin174?text=${encodeURIComponent(msg)}`;
+        const managerUrl = `https://t.me/SmokinShop174?text=${encodeURIComponent(msg)}`;
     
         // 5. Открываем чат
         window.open(managerUrl, '_blank');
@@ -538,4 +538,5 @@
 </script>
 </body>
 </html>
+
 
