--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
         msg += `💰 *ИТОГО К ОПЛАТЕ: ${total}*`;
     
         // Формируем ссылку
-        const link = `https://t.me/smokin174?text=${encodeURIComponent(msg)}`;
+        const link = `https://t.me/smokinshop174?text=${encodeURIComponent(msg)}`;
     
         // ПРОВЕРКА ДЛЯ MINI APP
         if (window.Telegram && window.Telegram.WebApp && window.Telegram.WebApp.openTelegramLink) {
@@ -535,6 +535,7 @@
 </script>
 </body>
 </html>
+
 
 
 
