--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         msg += `💰 ИТОГО: ${total}`;
     
         // Формируем прямую ссылку на твой личный аккаунт
-        const link = `https://t.me/smokin174?text=${encodeURIComponent(msg)}`;
+        const link = `https://t.me/smokinshop174?text=${encodeURIComponent(msg)}`;
     
         // ПРОВЕРКА: Если мы внутри Telegram Mini App
         if (window.Telegram && window.Telegram.WebApp && window.Telegram.WebApp.initData !== "") {
@@ -529,4 +529,5 @@
 </script>
 </body>
 </html>
+
 
