--- a/index.html
+++ b/index.html
@@ -513,4 +513,5 @@
     load();
 </script>
 </body>
-</html> сделай интересный фон не спокойный а более резкий под мою тематику сайта остальное не трогай
+</html>
+
